@@ -1,3 +1,9 @@
+2006-08-31  Richard Guenther  <rguenther@suse.de>
+
+	* include/ext/mt_allocator.h: Remove volatile qualifiers
+	from data members and corresponding locals and function
+	signatures.
+
 2006-08-31  Paolo Carlini  <pcarlini@suse.de>
 
 	* config/abi/pre/gnu.ver: Correct atomic helper function signature
